// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`uml > should keep content as is 1`] = `
"<div class="uml" title="">
Text with **bold** and \`code\`.
</div>"
`;

exports[`uml > should render with options 1`] = `
"<Test class="test" title="">
abc

def
</Test>"
`;

exports[`uml > should render without options 1`] = `
"<div class="uml" title="">
abc
</div>"
`;
